--- a/private_dot_config/wlr-which-key/config.yaml
+++ b/private_dot_config/wlr-which-key/config.yaml
@@ -125,7 +125,7 @@ menu:
         desc: minimize window
         cmd: mmsg -d minimized
         keep_open: true
-      - key: "ä"
+      - key: "˝"
         desc: restore window
         cmd: mmsg -d restore_minimized
         keep_open: true
@@ -145,4 +145,43 @@ menu:
          desc: switch scroller layout proportion
          cmd: mmsg -d switch_proportion_preset
          keep_open: true
-      #- key:
+      - key: "b"
+        desc: tile layout +1
+        cmd: mmsg -d incnmaster,1
+        keep_open: true
+      - key: "n"
+        desc: tile layout -1
+        cmd: mmsg -d incnmaster,-1
+        keep_open: true
+      - key: "v"
+        desc: tile lsyout zoom
+        cmd: mmsg -d zoom
+        keep_open: true
+      - key: "c"
+        desc: switch layout
+        cmd: mmsg -d switch_layout
+        keep_open: true
+      - key: "æ"
+        desc: switch to view left
+        cmd: mmsg -d viewtoleft,0
+        keep_open: true
+      - key: "ð"
+        desc: switch view to right
+        cmd: mmsg -d viewtoright,0
+        keep_open: true
+      - key: "ŋ"
+        desc: switch to view left with client
+        cmd: mmsg -d viewtoleft_have_client,0
+        keep_open: true
+      - key: "ħ"
+        desc: switch to view right with client
+        cmd: mmsg -d viewtoright_have_client,0
+        keep_open: true
+      - key: "ʒ"
+        desc: switch tag to left
+        cmd: mmsg -d tagtoleft,0
+        keep_open: true
+      - key: "ł"
+        desc: switch tag to right
+        cmd: mmsg -d tagtoright,0
+        keep_open: true
